--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -17,10 +17,10 @@
                 Bike
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="bike-link">
-                <a href="" class="dropdown-item">e-bike</a>
-                <a href="" class="dropdown-item">Mountain</a>
-                <a href="" class="dropdown-item">Race</a>
-                <a href="" class="dropdown-item">Transport</a>
+                <a href="{% url 'products' %}?category=e_bike" class="dropdown-item">e-bike</a>
+                <a href="{% url 'products' %}?category=mountain" class="dropdown-item">Mountain</a>
+                <a href="{% url 'products' %}?category=race" class="dropdown-item">Race</a>
+                <a href="{% url 'products' %}?category=transport" class="dropdown-item">Transport</a>
 
             </div>
         </li>
@@ -30,9 +30,9 @@
                 Accessories
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="riding-gear-link">
-                <a href="" class="dropdown-item">Parts</a>
-                <a href="" class="dropdown-item">Cloths</a>
-                <a href="" class="dropdown-item">Accessories</a>
+                <a href="{% url 'products' %}?category=parts" class="dropdown-item">Parts</a>
+                <a href="{% url 'products' %}?category=cloths" class="dropdown-item">Cloths</a>
+                <a href="{% url 'products' %}?category=accessories" class="dropdown-item">Accessories</a>
             </div>
         </li>
 
@@ -41,10 +41,10 @@
                 Special Offers
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">New Arrivals</a>
-                <a href="" class="dropdown-item">Deals</a>
-                <a href="" class="dropdown-item">Clearance</a>
-                <a href="" class="dropdown-item">All Specials</a>
+                <a href="{% url 'products' %}?category=new_arrivals" class="dropdown-item">New Arrivals</a>
+                <a href="{% url 'products' %}?category=deals" class="dropdown-item">Deals</a>
+                <a href="{% url 'products' %}?category=clearance" class="dropdown-item">Clearance</a>
+                <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="dropdown-item">All Specials</a>
             </div>
         </li>
     </ul>
