Adding reviews model

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -46,7 +46,7 @@
             </div>
             <!-- Store address details -->
             <div class="col-sm-5 text-center">
-                <h2 class="mb-2">Contact details</h2>
+                <h2 class="mb-2">Contact details</h2><br>
                 <p><i class="fas fa-map-marker-alt"></i><br>
                     Antonioustraat 8<br>
                     Waalwijk 5144 EF<br>
