--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -110,6 +110,9 @@
             </div>
         </div>
     </div>
+    
+{% include 'reviews/includes/reviews.html' %}
+
 {% endblock %}
 
 {% block postloadjs %}
