--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,5 +1,6 @@
 <footer class="footer mt-auto py-3">
     <div class="container text-center">
-        <span class="text-center">Kamil Kwiatkowski</span>
+        <span>Copyright &copy; Kamil Kwiatkowski</span>
+        <span class="right"><a href="{% url 'contact' %}">Contact</a></span>
     </div>
 </footer>
