--- a/templates/base.html
+++ b/templates/base.html
@@ -38,12 +38,14 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
+        <!-- side store name -->
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <h2 class="logo-font text-black my-0"><strong>Be</strong> Bike</h2>
+                    <h2 class="logo-font text-black my-0">Be Bike <i class="fa fa-bicycle" aria-hidden="true"></i></h2>
                 </a>
             </div>
+            <!-- search area -->
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <form method="GET" action="{% url 'products' %}">
                     <div class="input-group w-100">
@@ -60,6 +62,7 @@
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                    <!-- my account menu -->
                     <li class="list-inline-item dropdown">
                         <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
@@ -80,6 +83,7 @@
                             {% endif %}
                         </div>
                     </li>
+                    <!-- bag sumarry and link to bag -->
                     <li class="list-inline-item">
                         <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
                             <div class="text-center">
@@ -106,8 +110,9 @@
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
+        <!-- free delivery banner -->
         <div id="delivery-banner" class="row text-center">
-            <div class="col bg-black text-white">
+            <div class="col banner-color text-white">
                 <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
             </div>            
         </div>
