--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
+    <div class="overlay products-color"></div>
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center mt-3">
