--- a/reviews/templates/reviews/edit_review.html
+++ b/reviews/templates/reviews/edit_review.html
@@ -11,20 +11,21 @@
 {% endblock %}
 
 {% block content %}
+<div class="overlay"></div>
 <div class="container">
     <div class="row">
         <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 mt-5 mb-3">
-            <h2 class="text-center">Edit Review</h2>
+            <h2 class="text-center">Edit your review</h2>
         </div>
     </div>
-    <!-- form that allows the user to edit-->
+    <!-- form to edit review -->
     <div class="row pb-5">
         <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 p-5 form-bg">
             <form method="POST" action="{% url 'edit_review' review.id %}" class="form mb-2"
                 enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form | crispy }}
-                <!--buttons to update or cancel the process-->
+                <!--buttons to update and cancel -->
                 <div class="text-center">
                     <button class="btn rounded-0 btn-dark mt-3 mr-3" type="submit">Update</button>
                     <a href="{% url 'product_detail' product.id %}" class="btn btn-outline-red btn-danger mt-3 ml-3">Cancel</a>
