--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -4,7 +4,6 @@
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}">
 {% endblock %}
-
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -14,8 +13,8 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay profile-body"></div>
-    <div class="container">
+    <div class="overlay"></div>
+    <div class="container footer-padding">
         <div class="row">
             <div class="col">
                 <hr>
@@ -73,6 +72,7 @@
                 </div>
             </div>
         </div>
+    </div>
 {% endblock %}
 
 {% block postloadjs %}
