--- a/reviews/templates/reviews/includes/reviews.html
+++ b/reviews/templates/reviews/includes/reviews.html
@@ -1,7 +1,7 @@
 {% block content %}
 {% load static %}
     <!-- Review header -->
-<div class="container review-container mt-0 mb-5">
+<div class="container review-container mt-0 mb-5 text-center">
     <div class="row mt-0">
         <div class="col-12">
             <div>
@@ -50,7 +50,10 @@
                 <a href="{% url 'add_review' product.id %}" class="btn btn-black rounded-0 mt-3">
                         Add Your Review
                 </a>
-            </div> 
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
 {% block postloadjs %}
 <script>
