--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,5 +1,5 @@
-<footer class="footer mt-auto py-3">
-    <div class="container text-center">
+<footer class="footer py-3 prussian-blue">
+    <div class="container text-center text-white">
         <span>Copyright &copy; Kamil Kwiatkowski</span>
         <span class="right"><a href="{% url 'contact' %}">Contact</a></span>
     </div>
