--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -16,7 +16,7 @@
 {% block content %}
 <!-- Overlay -->
 <div class="overlay"></div>
-<div class="container">
+<div class="container footer-padding">
     <div class="row">
         <div class="col">
             <hr>
