--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container">
+    <div class="container footer-padding">
         <div class="row">
             <div class="col-12 col-md-6">
                 <hr>
