--- a/reviews/templates/reviews/add_review.html
+++ b/reviews/templates/reviews/add_review.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container">
+<div class="container footer-padding">
     <div class="row">
         <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 mt-5 mb-3">
             <h2 class="text-center">Add your review</h2>
