--- a/templates/base.html
+++ b/templates/base.html
@@ -90,9 +90,9 @@
                                 <div><i class="fa fa-shopping-cart fa-lg"></i></div>
                                 <p class="my-0">
                                     {% if grand_total %}
-                                        ${{ grand_total|floatformat:2 }}
+                                        €{{ grand_total|floatformat:2 }}
                                     {% else %}
-                                        $0.00
+                                        €0.00
                                     {% endif %}
                                 </p>
                             </div>
@@ -113,7 +113,7 @@
         <!-- free delivery banner -->
         <div id="delivery-banner" class="row text-center">
             <div class="col prussian-blue text-white">
-                <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
+                <h4 class="logo-font my-1">Free delivery on orders over €{{ free_delivery_threshold }}!</h4>                
             </div>
         </div>
     </header>
