--- a/newsletter/templates/newsletter/newsletter_signup.html
+++ b/newsletter/templates/newsletter/newsletter_signup.html
@@ -29,7 +29,7 @@
                 {% csrf_token %}
                 {{ form }}
                 <div class="py-3">
-                    <button class="btn btt" type="submit">Subscribe</button>
+                    <button class="btn btn-black" type="submit">Subscribe</button>
                 </div>
             </form>
         </div>
