--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,18 +10,76 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
-        <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
-                    All you need is here
-                </h1>
-                <div class="my-5">
-                    <h4>
-                        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
-                    </h4>
+<div class="container index-style">
+    <div class="row">
+        <div class="col">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="container h-100">
+                        <div class="row h-100">
+                            <div class="col-7 col-md-3 my-auto">
+                                <h1 class="display-4 logo-font text-black">
+                                    Here is all the cyclist needs
+                                </h1>
+                                <div class="my-5">
+                                    <h4>
+                                        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                                    </h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <div class="carousel-item">
+                    <div class="container h-100">
+                        <div class="row h-100">
+                            <div class="col-7 col-md-3 my-auto">
+                                <h1 class="display-4 logo-font text-black">
+                                    Want to ask our experts about products?
+                                </h1>
+                                <div class="my-5">
+                                    <h4>
+                                        <a href="{% url 'contact' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Contact</a>
+                                    </h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="container h-100">
+                        <div class="row h-100">
+                            <div class="col-7 col-md-3 my-auto">
+                                <h1 class="display-4 logo-font text-black">
+                                    Are you intrested about our offer?
+                                </h1>
+                                <div class="my-5">
+                                    <h4>
+                                        <a href="{% url 'newsletter_signup' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Subscribe</a>
+                                    </h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
     </div>
+</div>
+
 {% endblock %}
