--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -6,7 +6,7 @@
             <a href="{% url 'contact' %}"><i class="fa fa-comments" aria-hidden="true"></i> Contact</a>
         </div>
         <div class="right">
-            <a href="{% url 'newsletter_signup' %}"><i class="fa fa-envelope" aria-hidden="true"></i> Subscribe</a>
+            <a href="{% url 'newsletter_subscribe' %}"><i class="fa fa-envelope" aria-hidden="true"></i> Newsletter</a>
         </div>
     </div>
 </footer>
