--- a/static/css/base.css
+++ b/static/css/base.css
@@ -321,7 +321,6 @@ input[name='q']::placeholder {
         padding-top: 164px;
     }
 }
-
 /* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
     .header-container {
@@ -332,7 +331,43 @@ input[name='q']::placeholder {
         height: calc(100vh - 116px);
     }
 
-    .logo-font {
-        font-size: xx-large;
+    .display-4.logo-font.text-black {
+        font-size: 2rem;
     }
+
+    .nav-link {
+        padding: 0.15rem;
+    }
+
+    .nav-link i.fa-lg {
+        font-size: 1rem;
+    }
+
+    .navbar-toggler {
+        padding: .6rem .6rem;
+        font-size: 1rem;
+    }
+
+    #delivery-banner h4 {
+        font-size: .9rem;
+    }
+
+    .btn.btn-outline-black.rounded-0,
+    .btn.btn-black.rounded-0 {
+        padding: .375rem .375rem;
+    }
+
+    .btn.btn-outline-black.rounded-0.btn-lg,
+    .btn.btn-black.rounded-0.btn-lg {
+        padding: .375rem .375rem;
+        font-size: .75rem;
+    }
+
+    .increment-qty, .decrement-qty {
+        padding: .25rem .5rem !important;
+    }
+
+    /* .logo-font {
+        font-size: xx-large;
+    } */
 }
