--- a/templates/404.html
+++ b/templates/404.html
@@ -8,7 +8,7 @@
     </div>
 {% endblock %}
 {% block content %}
-<!-- Handler template for Bad Request 400. -->
+<!-- Handler template for not found request 404. -->
 <div class="overlay"></div>
 <div class="container footer-padding">
     <div class="row">
