--- a/templates/500.html
+++ b/templates/500.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<!-- Handler template for Bad Request 400. -->
+<!-- Handler template for internal server error generic message 500 -->
 <div class="page-wrap d-flex flex-row align-items-center">
   <div class="container">
     <div class="row justify-content-center">
