email send corection

--- a/contact/static/contact/css/contact.css
+++ b/contact/static/contact/css/contact.css
@@ -6,3 +6,10 @@
     background: black;
     color: white;
 }
+
+input[type=text], input[type=email], textarea {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+   }
