Sytling and adding readme

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -35,7 +35,7 @@
                             {% for field in form %}
                             {{ field | as_crispy_field}}
                             {% endfor %}
-                            <input type="submit" value="Submit" class="btn btn-custom">
+                            <input type="submit" value="Submit" class="btn prussian-blue text-white">
                           </form>
                     </div>
                 </div>
