--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,12 +20,13 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner">
+                <!-- Products - shop now -->
                 <div class="carousel-item active">
                     <div class="container h-100">
                         <div class="row h-100">
                             <div class="col-7 col-md-3 my-auto">
                                 <h1 class="display-4 logo-font text-black">
-                                    Here is all the cyclist needs
+                                   Here is all the cyclist needs
                                 </h1>
                                 <div class="my-5">
                                     <h4>
@@ -36,6 +37,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- contact -->
                 <div class="carousel-item">
                     <div class="container h-100">
                         <div class="row h-100">
@@ -52,6 +54,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- Newsletter -->
                 <div class="carousel-item">
                     <div class="container h-100">
                         <div class="row h-100">
