--- a/static/css/base.css
+++ b/static/css/base.css
@@ -15,6 +15,10 @@ body {
     padding-bottom:60px;
 }
 
+.footer-link {
+    color: white;
+}
+
 /* from Bulma */
 .icon {
     align-items: center;
@@ -38,8 +42,13 @@ body {
     min-width: 260px;
 }
 
+.display-4 {
+    font-weight: 700;
+    text-shadow: 5px 1px 0px #118AB2;
+}
+
 .btn-black {
-    background: black;
+    background: #073B4C;
     color: white;
 }
 
@@ -80,7 +89,7 @@ body {
 }
 
 .border-black {
-    border: 1px solid black !important;
+    border: 1px solid #073B4C!important;
 }
 
 .bg-black {
@@ -165,7 +174,7 @@ input[name='q']::placeholder {
     height: 2px;
 }
 
-/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
+/* --------------------------------from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
 .arrow-up {
     width: 0; 
     height: 0; 
@@ -177,7 +186,7 @@ input[name='q']::placeholder {
     right: 36px;
 }
 
-/* Convenience classes - colors copied from Bootstrap */
+/* ---------------------------------Convenience classes - colors copied from Bootstrap */
 .arrow-primary {
     border-bottom-color: #007bff !important;
 }
@@ -216,9 +225,9 @@ input[name='q']::placeholder {
     overflow-y: auto;
 }
 
-/* -------------------------------- Media Queries */
+/* ---------------------------------------Media Queries */
 
-/* Slightly larger container on xl screens */
+/* ----------------------------------------Slightly larger container on xl screens 1200px */
 @media (min-width: 1200px) {
   .container {
     max-width: 80%;
@@ -307,7 +316,7 @@ input[name='q']::placeholder {
     border-radius: 0;
 }
 
-/* fixed top navbar only on medium and up */
+/* ----------------------------------fixed top navbar only on medium and up min 992px */
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
         position: fixed;
@@ -321,7 +330,7 @@ input[name='q']::placeholder {
         padding-top: 164px;
     }
 }
-/* pad the top a bit when navbar is collapsed on mobile */
+/* -----------------------------------pad the top a bit when navbar is collapsed on mobile mac 991px */
 @media (max-width: 991px) {
     .header-container {
         padding-top: 116px;
@@ -367,7 +376,15 @@ input[name='q']::placeholder {
         padding: .25rem .5rem !important;
     }
 
-    /* .logo-font {
-        font-size: xx-large;
-    } */
+    .index-style {
+        padding-top: 22vh;
+        float: left;
+    }
+
+    .shop-now-button {
+        min-width: 191px;
+    }
+    footer {
+        font-size: smaller;
+    }
 }
