Corecting newsletter html

--- a/newsletter/templates/newsletter/unsubscribe.html
+++ b/newsletter/templates/newsletter/unsubscribe.html
@@ -34,6 +34,7 @@
                 <!-- {% crispy form %} -->
                 <div class="py-3">
                     <button class="btn btn-black" type="submit">Unsubscribe</button>
+                    <a class="btn btn-black" href="{% url 'newsletter_subscribe' %}"> Back</a>
                 </div>
             </form>
         </div>
