--- a/newsletter/templates/newsletter/newsletter_subscription.html
+++ b/newsletter/templates/newsletter/newsletter_subscription.html
@@ -28,7 +28,7 @@
     <div class="row">
         <div class="col text-center mt-3">
             <h3 class="my-sm-2 my-md-3 my-lg-5 text-center font-weight-bold">Newsletter</h3>
-                <h4>Do you want to recive newsletter with our offer?</h4>
+                <h4>Do you want to receive newsletter with our offer?</h4>
                 <div class="py-3">
                     <a class="btn btn-black" href="{% url 'newsletter_signup' %}">Subscribe</a>
                     or
