--- a/newsletter/templates/newsletter/signup.html
+++ b/newsletter/templates/newsletter/signup.html
@@ -31,12 +31,12 @@
             <form method="POST">
                 {% csrf_token %}
                 {{ form|crispy }}
+                <!-- {% crispy form %} -->
                 <div class="py-3">
                     <button class="btn btn-black" type="submit">Subscribe</button>
+                    <a class="btn btn-black" href="{% url 'newsletter_subscribe' %}"> Back</a>
                 </div>
             </form>
-
-            <a href="{% url 'newsletter_subscribe' %}"></a>
         </div>
     </div>
 </div>
