Adding UX and Agile to readme

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -60,7 +60,7 @@
                         <div class="row h-100">
                             <div class="col-7 col-md-3 my-auto">
                                 <h1 class="display-4 logo-font text-black">
-                                    Are you intrested about our offer?
+                                    Are you intrested in our offer?
                                 </h1>
                                 <div class="my-5">
                                     <h4>
