--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -30,7 +30,7 @@
                                 </h1>
                                 <div class="my-5">
                                     <h4>
-                                        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                                        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3" aria-label="shop now">Shop Now</a>
                                     </h4>
                                 </div>
                             </div>
@@ -47,7 +47,7 @@
                                 </h1>
                                 <div class="my-5">
                                     <h4>
-                                        <a href="{% url 'contact' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Contact</a>
+                                        <a href="{% url 'contact' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3" aria-label="contact">Contact</a>
                                     </h4>
                                 </div>
                             </div>
@@ -64,7 +64,7 @@
                                 </h1>
                                 <div class="my-5">
                                     <h4>
-                                        <a href="{% url 'newsletter_signup' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Subscribe</a>
+                                        <a href="{% url 'newsletter_signup' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3" aria-label="subscribe">Subscribe</a>
                                     </h4>
                                 </div>
                             </div>
