--- a/newsletter/templates/newsletter/newsletter_subscription.html
+++ b/newsletter/templates/newsletter/newsletter_subscription.html
@@ -30,9 +30,9 @@
             <h3 class="my-sm-2 my-md-3 my-lg-5 text-center font-weight-bold">Newsletter</h3>
                 <h4>Do you want to receive newsletter with our offer?</h4>
                 <div class="py-3">
-                    <a class="btn btn-black" href="{% url 'newsletter_signup' %}">Subscribe</a>
+                    <a class="btn btn-black" href="{% url 'newsletter_signup' %}" aria-label="Subscribe">Subscribe</a>
                     or
-                    <a class="btn btn-black" href="{% url 'newsletter_unsubscribe' %}">Unsubscribe</a>
+                    <a class="btn btn-black" href="{% url 'newsletter_unsubscribe' %}" aria-label="Unsubscribe">Unsubscribe</a>
                 </div>
         </div>
     </div>
