--- a/newsletter/templates/newsletter/signup.html
+++ b/newsletter/templates/newsletter/signup.html
@@ -34,7 +34,7 @@
                 <!-- {% crispy form %} -->
                 <div class="py-3">
                     <button class="btn btn-black" type="submit">Subscribe</button>
-                    <a class="btn btn-black" href="{% url 'newsletter_subscribe' %}"> Back</a>
+                    <a class="btn btn-black" href="{% url 'newsletter_subscribe' %}" aria-label="Back"> Back</a>
                 </div>
             </form>
         </div>
