--- a/newsletter/templates/newsletter/unsubscribe.html
+++ b/newsletter/templates/newsletter/unsubscribe.html
@@ -33,8 +33,8 @@
                 {{ form|crispy }}
                 <!-- {% crispy form %} -->
                 <div class="py-3">
-                    <button class="btn btn-black" type="submit">Unsubscribe</button>
-                    <a class="btn btn-black" href="{% url 'newsletter_subscribe' %}"> Back</a>
+                    <button class="btn btn-black" type="submit" aria-label="Unsubscribe">Unsubscribe</button>
+                    <a class="btn btn-black" href="{% url 'newsletter_subscribe' %}" aria-label="Back"> Back</a>
                 </div>
             </form>
         </div>
