--- a/templates/400.html
+++ b/templates/400.html
@@ -12,7 +12,7 @@
           <strong>400 Bad Request</strong>
           <h4>Ooops, something went wrong</h4>
         </div>
-        <a href="{% url 'home' %}" class="btn btn-secondary">Back to store
+        <a href="{% url 'home' %}" class="btn btn-secondary" aria-label="Back to store">Back to store
         </a>
       </div>
     </div>
