--- a/templates/403.html
+++ b/templates/403.html
@@ -12,7 +12,7 @@
           <strong>403 Forbiden</strong>
           <h4>You Shall Not Pass</h4>
         </div>
-        <a href="{% url 'home' %}" class="btn btn-secondary">Back to store
+        <a href="{% url 'home' %}" class="btn btn-secondary" aria-label="Back to store">Back to store
         </a>
       </div>
     </div>
