--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -56,7 +56,7 @@
                         {% endfor %}
                         <div class="btt-button shadow-sm rounded-0 border border-black">
                             <a class="btt-link d-flex h-100">
-                                <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+                                <i class="fas fa-arrow-up text-black mx-auto my-auto" aria-label="back to top"></i>
                             </a>	
                         </div>
                     </div>
@@ -105,7 +105,7 @@
                     </div>
                 {% else %}
                     <p class="lead mb-5">Your bag is empty.</p>
-                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg" aria-label="Keep Shopping - return to Products">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
