--- a/bag/templates/bag/quantity-form.html
+++ b/bag/templates/bag/quantity-form.html
@@ -5,7 +5,7 @@
             <div class="input-group-prepend">
                 <button class="decrement-qty btn btn-sm btn-black rounded-0 decrement-qty_{{ item.item_id }} 
                     {% if item.size %}decrement-size_{{ item.item_id }}_{{ item.size }}{% endif %}" 
-                    data-item_id="{{ item.item_id }}" data-size="{{ item.size }}">
+                    data-item_id="{{ item.item_id }}" data-size="{{ item.size }}" aria-label="decrement quantity">
                     <span>
                         <i class="fas fa-minus fa-sm"></i>
                     </span>
@@ -14,18 +14,18 @@
             <input class="form-control form-control-sm qty_input id_qty_{{ item.item_id }} 
                 {% if item.size %}size_{{ item.item_id }}_{{ item.size }}{% endif %}" type="number"
                 name="quantity" value="{{ item.quantity }}" min="1" max="99"
-                data-item_id="{{ item.item_id }}" data-size="{{ item.size }}">
+                data-item_id="{{ item.item_id }}" data-size="{{ item.size }}" aria-label="quantity">
             <div class="input-group-append">
                 <button class="increment-qty btn btn-sm btn-black rounded-0 increment-qty_{{ item.item_id }} 
                     {% if item.size %}increment-size_{{ item.item_id }}_{{ item.size }}{% endif %}"
-                    data-item_id="{{ item.item_id }}" data-size="{{ item.size }}">
+                    data-item_id="{{ item.item_id }}" data-size="{{ item.size }}"aria-label="increment quantity">
                     <span>
                         <i class="fas fa-plus fa-sm"></i>
                     </span>
                 </button>
             </div>
             {% if item.product.has_sizes %}
-                <input type="hidden" name="product_size" value="{{ item.size }}">
+                <input type="hidden" name="product_size" value="{{ item.size }}" aria-label="product size">
             {% endif %}
         </div>
     </div>
