--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -33,8 +33,8 @@
                         {% endif %}
                     {% endfor %}
                     <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Add Product</button>
+                        <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}" aria-label="cancel">Cancel</a>
+                        <button class="btn btn-black rounded-0" type="submit" aria-label="Add">Add Product</button>
                     </div>
                 </form>
             </div>            
