--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -84,7 +84,7 @@
                                             {% endif %}
                                             {% if request.user.is_superuser %}
                                                 <small class="ml-3">
-                                                    <a href="{% url 'edit_product' product.id %}">Edit</a> | 
+                                                    <a href="{% url 'edit_product' product.id %}" aria-label="edit">Edit</a> | 
                                                     <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
                                                 </small>
                                             {% endif %}
