--- a/templates/404.html
+++ b/templates/404.html
@@ -19,7 +19,7 @@
             <hr>
         </div>
     </div>
-    <a href="{% url 'home' %}" class="btn btn-secondary">Back to store</a>
+    <a href="{% url 'home' %}" class="btn btn-secondary" aria-label="Back to store">Back to store</a>
 </div>
 </div>
 </div>
