--- a/templates/500.html
+++ b/templates/500.html
@@ -12,7 +12,7 @@
           <strong>500 Error</strong>
           <h4>Houston, we have a problem</h4>
         </div>
-        <a href="{% url 'home' %}" class="btn btn-secondary">Back to store
+        <a href="{% url 'home' %}" class="btn btn-secondary" aria-label="Back to store">Back to store
         </a>
       </div>
     </div>
