--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,10 +3,10 @@
 
         <div class="left">Copyright &copy; Kamil Kwiatkowski</div>
         <div class="right text-white">
-            <a href="{% url 'contact' %}" class="footer-link"><i class="fa fa-comments" aria-hidden="true"></i> Contact</a>
+            <a href="{% url 'contact' %}" class="footer-link" aria-label="Contact"><i class="fa fa-comments" aria-hidden="true"></i> Contact</a>
         </div>
         <div class="right">
-            <a href="{% url 'newsletter_subscribe' %}" class="footer-link"><i class="fa fa-envelope" aria-hidden="true"></i> Newsletter</a>
+            <a href="{% url 'newsletter_subscribe' %}" class="footer-link" aria-label="Newsletter"><i class="fa fa-envelope" aria-hidden="true"></i> Newsletter</a>
         </div>
     </div>
 </footer>
